Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOiPQ36bAAMXRhpJlrIDG2U",
+      "authorship_tag": "ABX9TyOBCh5/0R7bAuCu7lzzzI06",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -239,7 +239,7 @@
           "height": 61
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -307,7 +307,7 @@
           "height": 52
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -355,32 +355,37 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# いまここ"
+        "# チェバの定理\n",
+        "# 三角形 ABC において、任意の点 O をとり、直線 AO と BC、BO と CA、CO と AB の交点を\n",
+        "# それぞれ D,E,F とする。\n",
+        "# この時、次の等式が成立する。なお、点 O は、三角形の内部にあっても外部にあってもよい。\n",
+        "# {AF \\over FB} \\cdot {BD \\over DC} \\cdot {CE \\over EA} = 1\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "{AF \\over FB} \\cdot {BD \\over DC} \\cdot {CE \\over EA} = 1"
       ],
       "metadata": {
-        "id": "idehjX6MygPk"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3_Py_ZlQQndb"
+        "id": "3_Py_ZlQQndb",
+        "outputId": "16e96f30-e236-4c07-8d37-b75fa82037ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
       },
-      "source": [
-        "---\n",
-        "# チェバの定理\n",
-        "\n",
-        "三角形 $ABC$ において、任意の点 $O$ をとり、直線 $AO$ と $BC$、$BO$ と $CA$、$CO$ と $AB$ の交点をそれぞれ $D,E,F$ とする。この時、次の等式が成立する。なお、点 $O$ は、三角形の内部にあっても外部にあってもよい。\n",
-        "\n",
-        "$${AF \\over FB} \\cdot {BD \\over DC} \\cdot {CE \\over EA} = 1$$\n",
-        "\n",
-        "\n",
-        "図 チェバの定理。点Oが三角形の内部にある場合\n",
-        "\n",
-        "図 チェバの定理。点Oが三角形の外部にある場合\n",
-        "\n"
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n{AF \\over FB} \\cdot {BD \\over DC} \\cdot {CE \\over EA} = 1"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
@@ -420,8 +425,36 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "idehjX6MygPk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  立体図形\n",
+        "* 縦の長さ $a$ 、横の長さ $b$ 、高さ $h$  の直方体の対角線  $l$\n",
+        "$$l = \\sqrt{a^2 + b^2 + h^2}$$\n",
+        "* 底面の半径を $r$、母線の長さ  $l$ の円錐の高さ  $h$\n",
+        "$$h = \\sqrt{l^2 - r^2}$$\n",
+        "* 凸面体の頂点の数を $v$ 、辺の数を $e$ 、面の数を $f$ とすると以下の関係が成り立つ \n",
+        "(オイラーの多面体定理)\n",
+        "$$v - e + f = 2$$\n",
+        "\n"
+      ],
       "metadata": {
         "id": "w5aHlHcGlOil"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kzUfM2Qsxu_-"
       },
       "source": [
         "---\n",
