Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOBCh5/0R7bAuCu7lzzzI06",
+      "authorship_tag": "ABX9TyPrKdzy/PdgaoVEKrzNO5SY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -374,7 +374,7 @@
           "height": 52
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -424,6 +424,278 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# 立体図形\n",
+        "# 縦の長さ a 、横の長さ b 、高さ h  の直方体の対角線  l\n",
+        "# l = \\sqrt{a^2 + b^2 + h^2}\n",
+        "# 底面の半径を r、母線の長さ  l の円錐の高さ  h\n",
+        "# h = \\sqrt{l^2 - r^2}\n",
+        "# 凸面体の頂点の数を v 、辺の数を e 、面の数を f とすると以下の関係が成り立つ \n",
+        "# (オイラーの多面体定理)\n",
+        "# v - e + f = 2\n",
+        "%%latex\n",
+        "l = \\sqrt{a^2 + b^2 + h^2} \\\\\n",
+        "h = \\sqrt{l^2 - r^2} \\\\\n",
+        "v - e + f = 2"
+      ],
+      "metadata": {
+        "id": "w5aHlHcGlOil",
+        "outputId": "09d0a070-47bb-41e1-860a-96d099279ee1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 83
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "l = \\sqrt{a^2 + b^2 + h^2} \\\\\nh = \\sqrt{l^2 - r^2} \\\\\nv - e + f = 2"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 図形と方程式\n",
+        "# 中心座標 (a, b)、半径 r の円の方程式（標準形）\n",
+        "# (x-a)^2+(y-b)^2 = r^2\n",
+        "# 円の方程式の一般形\n",
+        "# x^2+y^2+hx+ky+c = 0　\n",
+        "# ただし、 h^2+k^2-4c > 0\n",
+        "# 円 x^2+y^2 = r^2 上の点P (x_1, y_1) における接線\n",
+        "# x_1x+y_1y = r^2\n",
+        "# 2点 A (a_1, b_1), B (a_2, b_2) 間の距離\n",
+        "# AB = \\sqrt{(a_2 - a_1)^2 + (b_2 - b_1)^2}\n",
+        "# 点  P(p, q) と直線 ax + by + c = 0 の距離\n",
+        "#  \\frac{\\left|ap + bq + c\\right\\vert}{\\sqrt{a^2 + b^2}}   \n",
+        "# 原点 O ・点 A(x_a,y_a) ・点 B(x_b,y_b) を結んでできる三角形OABの面積 S\n",
+        "# S = \\frac{1}{2} \\left|y_0\\right| \\left| x_a - x_b \\right|=\\frac{1}{2} \\left|x_0\\right| \\left| y_a - y_b \\right|  \n",
+        "# ただし x_0,\\;y_0 はそれぞれ直線 AB の x 切片、y 切片  \n",
+        "# または (サラスの公式）  S = \\frac {\\left| x_ay_b - x_by_a \\right|}{2} \n",
+        "# 2次関数 ( y=ax^2 ) 上の3点 A(x_a,y_a),\\; B(x_b,y_b),\\; C(x_c,y_c) を結んで出来る三角形 ABC の面積 S\n",
+        "# x_a - x_b = l, x_b - x_c = m, x_c - x_a = n とすると、\n",
+        "# S = \\frac{|almn|}{2} \n",
+        "%%latex\n",
+        "(x-a)^2+(y-b)^2 = r^2 \\\\\n",
+        "x^2+y^2+hx+ky+c = 0 \\\\\n",
+        "h^2+k^2-4c > 0 \\\\\n",
+        "x^2+y^2 = r^2 \\\\\n",
+        "x_1x+y_1y = r^2 \\\\\n",
+        "\\displaystyle\n",
+        "AB = \\sqrt{(a_2 - a_1)^2 + (b_2 - b_1)^2} \\\\[0.8em]\n",
+        " \\frac{\\left|ap + bq + c\\right\\vert}{\\sqrt{a^2 + b^2}} \\\\[0.8em]\n",
+        "S = \\frac{1}{2} \\left|y_0\\right| \\left| x_a - x_b \\right|=\\frac{1}{2} \\left|x_0\\right| \\left| y_a - y_b \\right|  \\\\[0.8em]\n",
+        "S = \\frac {\\left| x_ay_b - x_by_a \\right|}{2} \\\\[0.8em]\n",
+        "x_a - x_b = l, \\quad x_b - x_c = m, \\quad x_c - x_a = n \\\\[0.8em]\n",
+        "S = \\frac{|almn|}{2} "
+      ],
+      "metadata": {
+        "id": "dSG9BD0CUM5Z",
+        "outputId": "9550a80e-8b10-400c-ae8b-2d101f530860",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 385
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "(x-a)^2+(y-b)^2 = r^2 \\\\\nx^2+y^2+hx+ky+c = 0 \\\\\nh^2+k^2-4c > 0 \\\\\nx^2+y^2 = r^2 \\\\\nx_1x+y_1y = r^2 \\\\\n\\displaystyle\nAB = \\sqrt{(a_2 - a_1)^2 + (b_2 - b_1)^2} \\\\[0.8em]\n \\frac{\\left|ap + bq + c\\right\\vert}{\\sqrt{a^2 + b^2}} \\\\[0.8em]\nS = \\frac{1}{2} \\left|y_0\\right| \\left| x_a - x_b \\right|=\\frac{1}{2} \\left|x_0\\right| \\left| y_a - y_b \\right|  \\\\[0.8em]\nS = \\frac {\\left| x_ay_b - x_by_a \\right|}{2} \\\\[0.8em]\nx_a - x_b = l, \\quad x_b - x_c = m, \\quad x_c - x_a = n \\\\[0.8em]\nS = \\frac{|almn|}{2} "
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 三角形の面積\n",
+        "# 底辺の長さ  a 、高さ  h  の三角形の面積  S\n",
+        "# S = {1\\over 2}ah  \n",
+        "# 二辺の長さが  a,b  でその間の角が \\theta である三角形の面積  S\n",
+        "# S = \\frac{1}{2}ab\\sin \\theta  \n",
+        "# ある辺の長さが  a  でその両端の角が \\theta,\\; \\delta である三角形の面積  S\n",
+        "# S = \\frac{a^2\\sin \\theta\\sin \\delta}{2\\sin (\\theta+\\delta)} \n",
+        "# 三辺の長さが  a, b, c  で内接する円の半径が  r である三角形の面積  S\n",
+        "# S = \\frac{1}{2}r(a+b+c)  \n",
+        "# 三辺の長さが  a, b, c  である三角形の面積  S :（ヘロンの公式）\n",
+        "# S = \\sqrt{ \\frac{(a+b+c)(a+b-c)(a-b+c)(-a+b+c)}{16}} \n",
+        "# また、 s=\\frac{a + b + c}{2}   とすると、 \n",
+        "# S = \\sqrt{s(s - a)(s - b)(s - c)}  \n",
+        "# 内接円の半径を  r  とすると、三角形の面積  S = sr = \\sqrt{s(s - a)(s - b)(s - c)}  \n",
+        "# 従って、  r = \\sqrt{ \\frac{(s - a)(s - b)(s - c)}{s}}  \n",
+        "# 一辺の長さ  a  の正三角形の面積  S\n",
+        "# S = {\\sqrt{3}\\over 4}a^2  \n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "S = {1\\over 2}ah  \\\\[0.8em]\n",
+        "S = \\frac{1}{2}ab\\sin \\theta  \\\\[0.8em]\n",
+        "S = \\frac{a^2\\sin \\theta\\sin \\delta}{2\\sin (\\theta+\\delta)} \\\\[0.8em]\n",
+        "S = \\frac{1}{2}r(a+b+c)  \\\\[0.8em]\n",
+        "S = \\sqrt{ \\frac{(a+b+c)(a+b-c)(a-b+c)(-a+b+c)}{16}} \\\\[0.8em]\n",
+        "また、 s=\\frac{a + b + c}{2}   \\\\[0.8em]\n",
+        "S = \\sqrt{s(s - a)(s - b)(s - c)}  \\\\[0.8em]\n",
+        "S = sr = \\sqrt{s(s - a)(s - b)(s - c)}  \\\\[0.8em]\n",
+        "r = \\sqrt{ \\frac{(s - a)(s - b)(s - c)}{s}}  \\\\[0.8em]\n",
+        "S = {\\sqrt{3}\\over 4}a^2 "
+      ],
+      "metadata": {
+        "id": "fWK4MWAvYRWP",
+        "outputId": "c41f6c0c-0c94-407b-b62f-07642eb2724a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 485
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nS = {1\\over 2}ah  \\\\[0.8em]\nS = \\frac{1}{2}ab\\sin \\theta  \\\\[0.8em]\nS = \\frac{a^2\\sin \\theta\\sin \\delta}{2\\sin (\\theta+\\delta)} \\\\[0.8em]\nS = \\frac{1}{2}r(a+b+c)  \\\\[0.8em]\nS = \\sqrt{ \\frac{(a+b+c)(a+b-c)(a-b+c)(-a+b+c)}{16}} \\\\[0.8em]\nまた、 s=\\frac{a + b + c}{2}   \\\\[0.8em]\nS = \\sqrt{s(s - a)(s - b)(s - c)}  \\\\[0.8em]\nS = sr = \\sqrt{s(s - a)(s - b)(s - c)}  \\\\[0.8em]\nr = \\sqrt{ \\frac{(s - a)(s - b)(s - c)}{s}}  \\\\[0.8em]\nS = {\\sqrt{3}\\over 4}a^2 "
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 四角形の面積\n",
+        "# 縦の長さ  a 、横の長さ  b  の長方形の面積  S\n",
+        "# S = ab  \n",
+        "# 一辺の長さ  a  の正方形の面積  S\n",
+        "# S = a^2  \n",
+        "# 底辺の長さ  a 、高さ  h  の平行四辺形の面積  S\n",
+        "# S = ah  \n",
+        "# 上底の長さ  a 、下底の長さ  b 、高さ  h  の台形の面積  S\n",
+        "# S = {1\\over 2}(a+b)h  \n",
+        "# 対角線の長さ  a 、もう一つの対角線の長さ  b  のひし形の面積  S\n",
+        "# S = {1\\over 2}ab  \n",
+        "# 四辺の長さが a,b,c,d で円に内接する四角形の面積 S :（ブラーマグプタの公式）\n",
+        "# S=\\sqrt{\\frac{(a+b+c-d)(a+b-c+d)(a-b+c+d)(-a+b+c+d)}{16}} \n",
+        "# また、 s = \\frac{a + b + c + d}{2}   とすると、 S = \\sqrt{(s - a)(s - b)(s - c)(s - d)}  \n",
+        "%%latex\n",
+        "S = ab  \\\\\n",
+        "S = a^2  \\\\\n",
+        "S = ah  \\\\\n",
+        "\\displaystyle S = {1\\over 2}(a+b)   \\\\[0.8em]\n",
+        "S = {1\\over 2}ab  \\\\[0.8em]\n",
+        "S=\\sqrt{\\frac{(a+b+c-d)(a+b-c+d)(a-b+c+d)(-a+b+c+d)}{16}} \\\\[0.8em]\n",
+        "s = \\frac{a + b + c + d}{2}   \\\\[0.8em]\n",
+        "S = \\sqrt{(s - a)(s - b)(s - c)(s - d)}  \\\\[0.8em]"
+      ],
+      "metadata": {
+        "id": "ZXMJOn-1IqRv",
+        "outputId": "3a51032a-d31f-450a-ce5e-8ba003424443",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 318
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "S = ab  \\\\\nS = a^2  \\\\\nS = ah  \\\\\n\\displaystyle S = {1\\over 2}(a+b)   \\\\[0.8em]\nS = {1\\over 2}ab  \\\\[0.8em]\nS=\\sqrt{\\frac{(a+b+c-d)(a+b-c+d)(a-b+c+d)(-a+b+c+d)}{16}} \\\\[0.8em]\ns = \\frac{a + b + c + d}{2}   \\\\[0.8em]\nS = \\sqrt{(s - a)(s - b)(s - c)(s - d)}  \\\\[0.8em]"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 正多角形の面積\n",
+        "# 一辺の長さ  a  の正 n 角形の面積  S\n",
+        "# S = \\frac{n a^2}{4 \\tan{\\frac{\\pi}{n}} } \n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "S = \\frac{n a^2}{4 \\tan{\\frac{\\pi}{n}} } "
+      ],
+      "metadata": {
+        "id": "OKXcrHJafR0L",
+        "outputId": "4e45807c-a33e-415f-b01e-5836aef2e2c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 60
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nS = \\frac{n a^2}{4 \\tan{\\frac{\\pi}{n}} } "
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 円と扇形の面積\n",
+        "# 半径  r の円の面積  S\n",
+        "# S = \\pi r^2  \n",
+        "# 半径  r 、中心角 a （度）の扇形の面積 S\n",
+        "# S = \\frac{a}{360} r^2 \\pi  \n",
+        "# 半径  r 、中心角 \\theta (\\mathrm{rad}) の扇形の面積  S\n",
+        "# S = \\frac{1}{2} \\theta r^2  \n",
+        "# 半径  r 、弧の長さ l の扇形の面積  S\n",
+        "# S = \\frac{1}{2} rl  \n",
+        "%%latex\n",
+        "S = \\pi r^2  \\\\[0.8em]\n",
+        "\\displaystyle S = \\frac{a}{360} r^2 \\pi  \\\\[0.8em]\n",
+        "S = \\frac{1}{2} \\theta r^2  \\\\[0.8em]\n",
+        "S = \\frac{1}{2} rl \\\\[0.8em]"
+      ],
+      "metadata": {
+        "id": "m9pFF52TfgUx",
+        "outputId": "64bcefab-3fac-494b-fa02-3af5a7e9a9a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 192
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "S = \\pi r^2  \\\\[0.8em]\n\\displaystyle S = \\frac{a}{360} r^2 \\pi  \\\\[0.8em]\nS = \\frac{1}{2} \\theta r^2  \\\\[0.8em]\nS = \\frac{1}{2} rl \\\\[0.8em]"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -431,189 +703,6 @@
       "metadata": {
         "id": "idehjX6MygPk"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#  立体図形\n",
-        "* 縦の長さ $a$ 、横の長さ $b$ 、高さ $h$  の直方体の対角線  $l$\n",
-        "$$l = \\sqrt{a^2 + b^2 + h^2}$$\n",
-        "* 底面の半径を $r$、母線の長さ  $l$ の円錐の高さ  $h$\n",
-        "$$h = \\sqrt{l^2 - r^2}$$\n",
-        "* 凸面体の頂点の数を $v$ 、辺の数を $e$ 、面の数を $f$ とすると以下の関係が成り立つ \n",
-        "(オイラーの多面体定理)\n",
-        "$$v - e + f = 2$$\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "w5aHlHcGlOil"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kzUfM2Qsxu_-"
-      },
-      "source": [
-        "---\n",
-        "#  立体図形\n",
-        "\n",
-        "* 縦の長さ $a$ 、横の長さ $b$ 、高さ $h$  の直方体の対角線  $l$\n",
-        "\n",
-        "$$l = \\sqrt{a^2 + b^2 + h^2}$$\n",
-        "\n",
-        "* 底面の半径を $r$、母線の長さ  $l$ の円錐の高さ  $h$\n",
-        "\n",
-        "$$h = \\sqrt{l^2 - r^2}$$\n",
-        "\n",
-        "* 凸面体の頂点の数を $v$ 、辺の数を $e$ 、面の数を $f$ とすると以下の関係が成り立つ (オイラーの多面体定理)\n",
-        "\n",
-        "$$v - e + f = 2$$\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dSG9BD0CUM5Z"
-      },
-      "source": [
-        "---\n",
-        "#  図形と方程式\n",
-        "\n",
-        "* 中心座標 $\\displaystyle (a, b)$、半径 $r$ の円の方程式（標準形）\n",
-        "\n",
-        "$$\\displaystyle (x-a)^2+(y-b)^2 = r^2$$\n",
-        "\n",
-        "* 円の方程式の一般形\n",
-        "$$\\displaystyle x^2+y^2+hx+ky+c = 0$$　\n",
-        "ただし、 $h^2+k^2-4c > 0$\n",
-        "\n",
-        "* 円 $\\displaystyle x^2+y^2 = r^2$ 上の点P $\\displaystyle (x_1, y_1)$ における接線\n",
-        "$$\\displaystyle x_1x+y_1y = r^2$$\n",
-        "\n",
-        "* 2点 $A (a_1, b_1),\\;\\; B (a_2, b_2)$ 間の距離\n",
-        "$$AB = \\sqrt{(a_2 - a_1)^2 + (b_2 - b_1)^2}$$\n",
-        "\n",
-        "* 点  $P(p, q)$ と直線 $ax + by + c = 0$ の距離\n",
-        "$$ \\frac{\\left|ap + bq + c\\right\\vert}{\\sqrt{a^2 + b^2}}  $$ \n",
-        "\n",
-        "* 原点 $O$ ・点 $A(x_a,y_a)$ ・点 $B(x_b,y_b)$ を結んでできる三角形OABの面積 $S$\n",
-        "$$S = \\frac{1}{2} \\left|y_0\\right| \\left| x_a - x_b \\right|=\\frac{1}{2} \\left|x_0\\right| \\left| y_a - y_b \\right| $$ \n",
-        "ただし $x_0,\\;y_0$ はそれぞれ直線 $AB$ の $x$ 切片、$y$ 切片  \n",
-        "\n",
-        "* または (サラスの公式）  $$S = \\frac {\\left| x_ay_b - x_by_a \\right|}{2} $$\n",
-        "\n",
-        "* 2次関数 ( $y=ax^2$ ) 上の3点 $A(x_a,y_a),\\; B(x_b,y_b),\\; C(x_c,y_c)$ を結んで出来る三角形 $ABC$ の面積 $S$\n",
-        "$x_a - x_b = l,\\;\\; x_b - x_c = m,\\;\\; x_c - x_a = n$ とすると、\n",
-        "$$S = \\frac{|almn|}{2}$$ \n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fWK4MWAvYRWP"
-      },
-      "source": [
-        "---\n",
-        "# 三角形の面積\n",
-        "\n",
-        "* 底辺の長さ  $a$ 、高さ  $h$  の三角形の面積  $S$\n",
-        "$$S = {1\\over 2}ah $$ \n",
-        "\n",
-        "* 二辺の長さが  $a,b$  でその間の角が $\\theta$ である三角形の面積  $S$\n",
-        "$$S = \\frac{1}{2}ab\\sin \\theta $$ \n",
-        "\n",
-        "* ある辺の長さが  $a$  でその両端の角が $\\theta,\\; \\delta$ である三角形の面積  $S$\n",
-        "$$S = \\frac{a^2\\sin \\theta\\sin \\delta}{2\\sin (\\theta+\\delta)}$$ \n",
-        "\n",
-        "* 三辺の長さが  $a, b, c$  で内接する円の半径が  $r$ である三角形の面積  $S$\n",
-        "$$S = \\frac{1}{2}r(a+b+c) $$ \n",
-        "\n",
-        "* 三辺の長さが  $a, b, c$  である三角形の面積  $S$ :（ヘロンの公式）\n",
-        "$$S = \\sqrt{ \\frac{(a+b+c)(a+b-c)(a-b+c)(-a+b+c)}{16}}$$ \n",
-        "\n",
-        "* また、 $$s=\\frac{a + b + c}{2} $$  とすると、 \n",
-        "$$S = \\sqrt{s(s - a)(s - b)(s - c)} $$ \n",
-        "\n",
-        "* 内接円の半径を  $r$  とすると、三角形の面積  $$S = sr = \\sqrt{s(s - a)(s - b)(s - c)} $$ \n",
-        "\n",
-        "* 従って、  $$r = \\sqrt{ \\frac{(s - a)(s - b)(s - c)}{s}} $$ \n",
-        "\n",
-        "* 一辺の長さ  $a$  の正三角形の面積  $S$\n",
-        "$$S = {\\sqrt{3}\\over 4}a^2 $$ \n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZXMJOn-1IqRv"
-      },
-      "source": [
-        "---\n",
-        "# 四角形の面積\n",
-        "\n",
-        "* 縦の長さ  $a$ 、横の長さ  $b$  の長方形の面積  $S$\n",
-        "$$\\displaystyle S = ab $$ \n",
-        "\n",
-        "* 一辺の長さ  $a$  の正方形の面積  $S$\n",
-        "$$\\displaystyle S = a^2 $$ \n",
-        "\n",
-        "* 底辺の長さ  $a$ 、高さ  $h$  の平行四辺形の面積  $S$\n",
-        "$$\\displaystyle S = ah $$ \n",
-        "\n",
-        "* 上底の長さ  $a$ 、下底の長さ  $b$ 、高さ  $h$  の台形の面積  $S$\n",
-        "$$S = {1\\over 2}(a+b)h $$ \n",
-        "\n",
-        "* 対角線の長さ  $a$ 、もう一つの対角線の長さ  $b$  のひし形の面積  $S$\n",
-        "$$S = {1\\over 2}ab $$ \n",
-        "\n",
-        "* 四辺の長さが $a,b,c,d$ で円に内接する四角形の面積 $S$ :（ブラーマグプタの公式）\n",
-        "$$S=\\sqrt{\\frac{(a+b+c-d)(a+b-c+d)(a-b+c+d)(-a+b+c+d)}{16}}$$ \n",
-        "\n",
-        "* また、 $$s = \\frac{a + b + c + d}{2} $$  とすると、 $$S = \\sqrt{(s - a)(s - b)(s - c)(s - d)} $$ \n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OKXcrHJafR0L"
-      },
-      "source": [
-        "---\n",
-        "# 正多角形の面積\n",
-        "\n",
-        "* 一辺の長さ  $a$  の正 $n$ 角形の面積  $S$\n",
-        "$$S = \\frac{n a^2}{4 \\tan{\\frac{\\pi}{n}} }$$ \n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "m9pFF52TfgUx"
-      },
-      "source": [
-        "---\n",
-        "# 円と扇形の面積\n",
-        "\n",
-        "* 半径  $r$ の円の面積  $S$\n",
-        "$$S = \\pi r^2 $$ \n",
-        "\n",
-        "* 半径  $r$ 、中心角 $a$ （度）の扇形の面積 $S$\n",
-        "$$S = \\frac{a}{360} r^2 \\pi $$ \n",
-        "\n",
-        "* 半径  $r$ 、中心角 $\\theta (\\mathrm{rad})$ の扇形の面積  $S$\n",
-        "$$S = \\frac{1}{2} \\theta r^2 $$ \n",
-        "\n",
-        "* 半径  $r$ 、弧の長さ $l$ の扇形の面積  $S$\n",
-        "$$S = \\frac{1}{2} rl $$ \n",
-        "\n"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1454,6 +1543,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EOF"
+      ],
+      "metadata": {
+        "id": "KPya0L2Vuug9"
+      }
     }
   ]
 }
