Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPrKdzy/PdgaoVEKrzNO5SY",
+      "authorship_tag": "ABX9TyNWEgZIA0L/xBye9fi8bQ5t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,7 +447,7 @@
           "height": 83
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -505,7 +505,7 @@
           "height": 385
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -560,7 +560,7 @@
           "height": 485
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -609,7 +609,7 @@
           "height": 318
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -641,7 +641,7 @@
           "height": 60
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -681,7 +681,7 @@
           "height": 192
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -690,6 +690,52 @@
               "<IPython.core.display.Latex object>"
             ],
             "text/latex": "S = \\pi r^2  \\\\[0.8em]\n\\displaystyle S = \\frac{a}{360} r^2 \\pi  \\\\[0.8em]\nS = \\frac{1}{2} \\theta r^2  \\\\[0.8em]\nS = \\frac{1}{2} rl \\\\[0.8em]"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 立体図形の面積\n",
+        "# 縦の長さ  a 、横の長さ  b 、高さ  h  の直方体の表面積  S\n",
+        "# S = 2(ab + bh + ah)  \n",
+        "# 底面積 B\n",
+        "# B = 2ab  \n",
+        "# 側面積 A\n",
+        "# A = 2h(a + b)  \n",
+        "# 一辺の長さ  a  の立方体の表面積  S\n",
+        "# S = 6a^2 \n",
+        "# 底面の周の長さ  l 、高さ  h  の柱体の側面積  S\n",
+        "# S = lh \n",
+        "# 半径 r の球の表面積 S\n",
+        "# S = 4 \\pi r^2  \n",
+        "%%latex\n",
+        "S = 2(ab + bh + ah)  \\\\\n",
+        "B = 2ab  \\\\\n",
+        "A = 2h(a + b)  \\\\\n",
+        "S = 6a^2 \\\\\n",
+        "S = lh \\\\\n",
+        "S = 4 \\pi r^2"
+      ],
+      "metadata": {
+        "id": "0HvrJrjpHQRl",
+        "outputId": "a5d17fe3-4395-454f-b888-75a8d7b34ba3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 149
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "S = 2(ab + bh + ah)  \\\\\nB = 2ab  \\\\\nA = 2h(a + b)  \\\\\nS = 6a^2 \\\\\nS = lh \\\\\nS = 4 \\pi r^2"
           },
           "metadata": {}
         }
@@ -705,39 +751,57 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0HvrJrjpHQRl"
-      },
+      "cell_type": "code",
       "source": [
-        "---\n",
-        "#  立体図形の面積\n",
-        "\n",
-        "* 縦の長さ  $a$ 、横の長さ  $b$ 、高さ  $h$  の直方体の表面積  $S$\n",
-        "$$S = 2(ab + bh + ah) $$ \n",
-        "\n",
-        "* 底面積 $B$\n",
-        "$$B = 2ab $$ \n",
-        "\n",
-        "* 側面積 $A$\n",
-        "$$A = 2h(a + b) $$ \n",
-        "\n",
-        "* 一辺の長さ  $a$  の立方体の表面積  $S$\n",
-        "$$S = 6a^2$$ \n",
-        "\n",
-        "* 底面の周の長さ  $l$ 、高さ  $h$  の柱体の側面積  $S$\n",
-        "$$S = lh$$ \n",
-        "\n",
-        "* 半径 $r$ の球の表面積 $S$\n",
-        "$$S = 4 \\pi r^2 $$ \n",
-        "\n",
-        "&nbsp;\n"
-      ]
+        "# 体積\n",
+        "# 縦の長さ  a 、横の長さ  b 、高さ  h  の直方体の体積  V\n",
+        "#  V = abh  \n",
+        "# 一辺の長さ  a  の立方体の体積  V\n",
+        "#  V = a^3  \n",
+        "# 底面積  S 、高さ  h  の柱体の体積  V\n",
+        "# V = Sh  \n",
+        "# 底面積  S 、高さ  h  の錐体の体積  V\n",
+        "# V = \\frac{1}{3}Sh  \n",
+        "# 一辺の長さ  a  の正四面体の体積  V\n",
+        "# V = {\\sqrt{2}\\over 12}a^3  \n",
+        "# 一辺の長さ  a  の正八面体の体積  V\n",
+        "# V = {\\sqrt{2}\\over 3}a^3  \n",
+        "# 一辺の長さ  a  の正十二面体の体積  V\n",
+        "# V = {15 + 7\\sqrt{5}\\over 4}a^3  \n",
+        "# 一辺の長さ  a  の正二十面体の体積  V\n",
+        "# V = {5( 3 + \\sqrt{5} )\\over 12}a^3  \n",
+        "# *球の体積  V\n",
+        "# V = {4\\over 3}\\pi r^3  \n",
+        "$$latex\n",
+        "縦の長さ  a 、横の長さ  b 、高さ  h  の直方体の体積  V\n",
+        " V = abh  \n",
+        "一辺の長さ  a  の立方体の体積  V\n",
+        " V = a^3  \n",
+        "底面積  S 、高さ  h  の柱体の体積  V\n",
+        "V = Sh  \n",
+        "底面積  S 、高さ  h  の錐体の体積  V\n",
+        "V = \\frac{1}{3}Sh  \n",
+        "一辺の長さ  a  の正四面体の体積  V\n",
+        "V = {\\sqrt{2}\\over 12}a^3  \n",
+        "一辺の長さ  a  の正八面体の体積  V\n",
+        "V = {\\sqrt{2}\\over 3}a^3  \n",
+        "一辺の長さ  a  の正十二面体の体積  V\n",
+        "V = {15 + 7\\sqrt{5}\\over 4}a^3  \n",
+        "一辺の長さ  a  の正二十面体の体積  V\n",
+        "V = {5( 3 + \\sqrt{5} )\\over 12}a^3  \n",
+        "*球の体積  V\n",
+        "V = {4\\over 3}\\pi r^3  "
+      ],
+      "metadata": {
+        "id": "WSzSgYksJwZh"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WSzSgYksJwZh"
+        "id": "1HAzeYE4T4LJ"
       },
       "source": [
         "---\n",
@@ -826,7 +890,7 @@
         "$$|\\vec{x}\\cdot\\vec{y}| \\leq |\\vec{x}||\\vec{y}| $$ \n",
         "等号成立は、実数 $k$ があって  $\\vec{y} = k\\vec{x}$  とできるときのみ。\n",
         "\n",
-        "&nbsp;\n",
+        "\n",
         "\n"
       ]
     },
@@ -929,14 +993,14 @@
         "\n",
         "$\\qquad$ 等号成立は  $a$ <sub>1</sub> =  $a$ <sub>2</sub> = &hellip; =  $a$ <sub>$n$</sub> のときのみ。（相加平均と相乗平均の関係式）\n",
         "\n",
-        "&nbsp;\n",
+        "\n",
         "\n",
         "* 複素数から成る数列  $\\{a_n\\}$  に対し、\n",
         "$$|a_1+a_2+\\cdots+a_n| \\leq |a_1|+|a_2|+\\cdots+|a_n| $$ \n",
         "\n",
         "$\\qquad$ 等号成立はすべての数の偏角が等しいときのみ。（三角不等式）\n",
         "\n",
-        "&nbsp;\n",
+        "\n",
         "\n",
         "* 二つの数列  $\\{a_n\\}$ ,  $\\{b_n\\}$  に対し、\n",
         "\n",
@@ -969,7 +1033,7 @@
         "* $x^2 + bx + c = 0$ の場合\n",
         "$$x = -\\frac{b}{2} \\pm \\sqrt{\\frac{b^2}{4} - c}$$ \n",
         "\n",
-        "&nbsp;\n",
+        "\n",
         "\n",
         "* 2次方程式  $ax^2 + bx + c = 0$ の2つの解を $\\alpha , \\beta$ とすると\n",
         "$$ax^2 + bx + c = a(x-\\alpha)(x-\\beta)$$ \n",
