--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNNDNgkUuUeD7Bu6s34E+dH",
+      "authorship_tag": "ABX9TyPTmSUUsAM7s5rsDTepEKVO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -893,74 +893,70 @@
     {
       "cell_type": "code",
       "source": [
-        "#  展開公式\n",
-        "\n",
-        "基本公式\n",
-        "*  $(a+b)(c+d) = ac + ad + bc + bd$ \n",
-        "*  $(x+a)(x+b) = x^2 + (a+b)x + ab$ \n",
-        "*  $(ax+b)(cx+d) = acx^2 + (ad+bc)x + bd$ \n",
-        "\n",
-        "累乗\n",
-        "*  $(a+b)^2 = a^2 + 2ab + b^2$ \n",
-        "*  $(a-b)^2 = a^2 - 2ab + b^2$ \n",
-        "*  $(a+b)^3 = a^3 + 3a^2b + 3ab^2 + b^3$ \n",
-        "*  $(a-b)^3 = a^3 - 3a^2b + 3ab^2 - b^3$ \n",
-        "*  $(a+b)^4 = a^4 + 4a^3b + 6a^2b^2 + 4ab^3 + b^4$ \n",
-        "*  $(a-b)^4 = a^4 - 4a^3b + 6a^2b^2 - 4ab^3 + b^4$ \n",
-        "*  $(a+b)^5 = a^5 + 5a^4b + 10a^3b^2 + 10a^2b^3 + 5ab^4 + b^5$ \n",
-        "*  $(a+b)^8 = a^8 + 8a^7b + 28a^6b^2 + 56a^5b^3 + 70a^4b^4 + 56a^3b^5 + 28a^2b^6 + 8ab^7 + b^8$ \n",
-        "*  $(a-b)^8 = a^8 - 8a^7b + 28a^6b^2 - 56a^5b^3 + 70a^4b^4 - 56a^3b^5 + 28a^2b^6 - 8ab^7 + b^8$ \n",
-        "*  $(a+b)^n = \\sum_{r = 0}^n{}_n{\\rm C}_{r} a^{n-r} b^r$ \n",
-        "\n",
-        "応用\n",
-        "*  $(a+b)(a-b) = a^2 - b^2$ \n",
-        "*  $(a+b)(a^2 - ab + b^2) = a^3 + b^3$ \n",
-        "*  $(a-b)(a^2 + ab + b^2) = a^3 - b^3$ \n",
-        "*  $(a+b+c)^2 = a^2 + b^2 + c^2 + 2ab + 2bc + 2ca$ \n",
-        "*  $(a+b+c)^3 = a^3 + b^3 + c^3 + 3ab^2 + 3ac^2 + 3ba^2 + 3ca^2 + 6abc + 3bc^2 + 3cb^2$ \n",
-        "*  $(a+b+c)^4 = a^4 + b^4 + c^4 + 4ab^3 + 4ac^3 + 4ba^3 + 4ca^3 + 4bc^3 + 4cb^3 + 6a^2b^2 + 6a^2c^2 + 6b^2c^2 + 12a^2bc + 12ab^2c + 12abc^2$ \n",
-        "\n"
+        "# 展開公式\n",
+        "# 基本公式\n",
+        "# (a+b)(c+d) = ac + ad + bc + bd\n",
+        "# (x+a)(x+b) = x^2 + (a+b)x + ab\n",
+        "# (ax+b)(cx+d) = acx^2 + (ad+bc)x + bd\n",
+        "# 累乗\n",
+        "# (a+b)^2 = a^2 + 2ab + b^2\n",
+        "# (a-b)^2 = a^2 - 2ab + b^2\n",
+        "# (a+b)^3 = a^3 + 3a^2b + 3ab^2 + b^3\n",
+        "# (a-b)^3 = a^3 - 3a^2b + 3ab^2 - b^3\n",
+        "# (a+b)^4 = a^4 + 4a^3b + 6a^2b^2 + 4ab^3 + b^4\n",
+        "# (a-b)^4 = a^4 - 4a^3b + 6a^2b^2 - 4ab^3 + b^4\n",
+        "# (a+b)^5 = a^5 + 5a^4b + 10a^3b^2 + 10a^2b^3 + 5ab^4 + b^5\n",
+        "# (a+b)^8 = a^8 + 8a^7b + 28a^6b^2 + 56a^5b^3 + 70a^4b^4 + 56a^3b^5 + 28a^2b^6 + 8ab^7 + b^8\n",
+        "# (a-b)^8 = a^8 - 8a^7b + 28a^6b^2 - 56a^5b^3 + 70a^4b^4 - 56a^3b^5 + 28a^2b^6 - 8ab^7 + b^8\n",
+        "# (a+b)^n = \\sum_{r = 0}^n{}_n{\\rm C}_{r} a^{n-r} b^r\n",
+        "# 応用\n",
+        "# (a+b)(a-b) = a^2 - b^2\n",
+        "# (a+b)(a^2 - ab + b^2) = a^3 + b^3\n",
+        "# (a-b)(a^2 + ab + b^2) = a^3 - b^3\n",
+        "# (a+b+c)^2 = a^2 + b^2 + c^2 + 2ab + 2bc + 2ca\n",
+        "# (a+b+c)^3 = a^3 + b^3 + c^3 + 3ab^2 + 3ac^2 + 3ba^2 + 3ca^2 + 6abc + 3bc^2 + 3cb^2\n",
+        "# (a+b+c)^4 = a^4 + b^4 + c^4 + 4ab^3 + 4ac^3 + 4ba^3 + 4ca^3 + 4bc^3 + 4cb^3 + 6a^2b^2 + 6a^2c^2 + 6b^2c^2 + 12a^2bc + 12ab^2c + 12abc^2\n",
+        "%%latex\n",
+        "(a+b)(c+d) = ac + ad + bc + bd \\\\\n",
+        "(x+a)(x+b) = x^2 + (a+b)x + ab \\\\\n",
+        "(ax+b)(cx+d) = acx^2 + (ad+bc)x + bd \\\\\n",
+        "(a+b)^2 = a^2 + 2ab + b^2 \\\\\n",
+        "(a-b)^2 = a^2 - 2ab + b^2 \\\\\n",
+        "(a+b)^3 = a^3 + 3a^2b + 3ab^2 + b^3 \\\\\n",
+        "(a-b)^3 = a^3 - 3a^2b + 3ab^2 - b^3 \\\\\n",
+        "(a+b)^4 = a^4 + 4a^3b + 6a^2b^2 + 4ab^3 + b^4 \\\\\n",
+        "(a-b)^4 = a^4 - 4a^3b + 6a^2b^2 - 4ab^3 + b^4 \\\\\n",
+        "(a+b)^5 = a^5 + 5a^4b + 10a^3b^2 + 10a^2b^3 + 5ab^4 + b^5 \\\\\n",
+        "(a+b)^8 = a^8 + 8a^7b + 28a^6b^2 + 56a^5b^3 + 70a^4b^4 + 56a^3b^5 + 28a^2b^6 + 8ab^7 + b^8 \\\\\n",
+        "(a-b)^8 = a^8 - 8a^7b + 28a^6b^2 - 56a^5b^3 + 70a^4b^4 - 56a^3b^5 + 28a^2b^6 - 8ab^7 + b^8 \\\\\n",
+        "\\displaystyle (a+b)^n = \\sum_{r = 0}^n{}_n{\\rm C}_{r} a^{n-r} b^r \\\\\n",
+        "(a+b)(a-b) = a^2 - b^2 \\\\\n",
+        "(a+b)(a^2 - ab + b^2) = a^3 + b^3 \\\\\n",
+        "(a-b)(a^2 + ab + b^2) = a^3 - b^3 \\\\\n",
+        "(a+b+c)^2 = a^2 + b^2 + c^2 + 2ab + 2bc + 2ca \\\\\n",
+        "(a+b+c)^3 = a^3 + b^3 + c^3 + 3ab^2 + 3ac^2 + 3ba^2 + 3ca^2 + 6abc + 3bc^2 + 3cb^2 \\\\\n",
+        "(a+b+c)^4 = a^4 + b^4 + c^4 + 4ab^3 + 4ac^3 + 4ba^3 + 4ca^3 + 4bc^3 + 4cb^3 + 6a^2b^2 + 6a^2c^2 + 6b^2c^2 + 12a^2bc + 12ab^2c + 12abc^2 \\\\"
       ],
       "metadata": {
-        "id": "DISM-JNVMgzj"
+        "id": "DISM-JNVMgzj",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 461
+        },
+        "outputId": "e6a8927d-a4b6-4d39-8203-84f374848b44"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iMgPJ8eHr6ys"
-      },
-      "source": [
-        "---\n",
-        "#  展開公式\n",
-        "\n",
-        "基本公式\n",
-        "*  $(a+b)(c+d) = ac + ad + bc + bd$ \n",
-        "*  $(x+a)(x+b) = x^2 + (a+b)x + ab$ \n",
-        "*  $(ax+b)(cx+d) = acx^2 + (ad+bc)x + bd$ \n",
-        "\n",
-        "累乗\n",
-        "*  $(a+b)^2 = a^2 + 2ab + b^2$ \n",
-        "*  $(a-b)^2 = a^2 - 2ab + b^2$ \n",
-        "*  $(a+b)^3 = a^3 + 3a^2b + 3ab^2 + b^3$ \n",
-        "*  $(a-b)^3 = a^3 - 3a^2b + 3ab^2 - b^3$ \n",
-        "*  $(a+b)^4 = a^4 + 4a^3b + 6a^2b^2 + 4ab^3 + b^4$ \n",
-        "*  $(a-b)^4 = a^4 - 4a^3b + 6a^2b^2 - 4ab^3 + b^4$ \n",
-        "*  $(a+b)^5 = a^5 + 5a^4b + 10a^3b^2 + 10a^2b^3 + 5ab^4 + b^5$ \n",
-        "*  $(a+b)^8 = a^8 + 8a^7b + 28a^6b^2 + 56a^5b^3 + 70a^4b^4 + 56a^3b^5 + 28a^2b^6 + 8ab^7 + b^8$ \n",
-        "*  $(a-b)^8 = a^8 - 8a^7b + 28a^6b^2 - 56a^5b^3 + 70a^4b^4 - 56a^3b^5 + 28a^2b^6 - 8ab^7 + b^8$ \n",
-        "*  $(a+b)^n = \\sum_{r = 0}^n{}_n{\\rm C}_{r} a^{n-r} b^r$ \n",
-        "\n",
-        "応用\n",
-        "*  $(a+b)(a-b) = a^2 - b^2$ \n",
-        "*  $(a+b)(a^2 - ab + b^2) = a^3 + b^3$ \n",
-        "*  $(a-b)(a^2 + ab + b^2) = a^3 - b^3$ \n",
-        "*  $(a+b+c)^2 = a^2 + b^2 + c^2 + 2ab + 2bc + 2ca$ \n",
-        "*  $(a+b+c)^3 = a^3 + b^3 + c^3 + 3ab^2 + 3ac^2 + 3ba^2 + 3ca^2 + 6abc + 3bc^2 + 3cb^2$ \n",
-        "*  $(a+b+c)^4 = a^4 + b^4 + c^4 + 4ab^3 + 4ac^3 + 4ba^3 + 4ca^3 + 4bc^3 + 4cb^3 + 6a^2b^2 + 6a^2c^2 + 6b^2c^2 + 12a^2bc + 12ab^2c + 12abc^2$ \n",
-        "\n"
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "(a+b)(c+d) = ac + ad + bc + bd \\\\\n(x+a)(x+b) = x^2 + (a+b)x + ab \\\\\n(ax+b)(cx+d) = acx^2 + (ad+bc)x + bd \\\\\n(a+b)^2 = a^2 + 2ab + b^2 \\\\\n(a-b)^2 = a^2 - 2ab + b^2 \\\\\n(a+b)^3 = a^3 + 3a^2b + 3ab^2 + b^3 \\\\\n(a-b)^3 = a^3 - 3a^2b + 3ab^2 - b^3 \\\\\n(a+b)^4 = a^4 + 4a^3b + 6a^2b^2 + 4ab^3 + b^4 \\\\\n(a-b)^4 = a^4 - 4a^3b + 6a^2b^2 - 4ab^3 + b^4 \\\\\n(a+b)^5 = a^5 + 5a^4b + 10a^3b^2 + 10a^2b^3 + 5ab^4 + b^5 \\\\\n(a+b)^8 = a^8 + 8a^7b + 28a^6b^2 + 56a^5b^3 + 70a^4b^4 + 56a^3b^5 + 28a^2b^6 + 8ab^7 + b^8 \\\\\n(a-b)^8 = a^8 - 8a^7b + 28a^6b^2 - 56a^5b^3 + 70a^4b^4 - 56a^3b^5 + 28a^2b^6 - 8ab^7 + b^8 \\\\\n\\displaystyle (a+b)^n = \\sum_{r = 0}^n{}_n{\\rm C}_{r} a^{n-r} b^r \\\\\n(a+b)(a-b) = a^2 - b^2 \\\\\n(a+b)(a^2 - ab + b^2) = a^3 + b^3 \\\\\n(a-b)(a^2 + ab + b^2) = a^3 - b^3 \\\\\n(a+b+c)^2 = a^2 + b^2 + c^2 + 2ab + 2bc + 2ca \\\\\n(a+b+c)^3 = a^3 + b^3 + c^3 + 3ab^2 + 3ac^2 + 3ba^2 + 3ca^2 + 6abc + 3bc^2 + 3cb^2 \\\\\n(a+b+c)^4 = a^4 + b^4 + c^4 + 4ab^3 + 4ac^3 + 4ba^3 + 4ca^3 + 4bc^3 + 4cb^3 + 6a^2b^2 + 6a^2c^2 + 6b^2c^2 + 12a^2bc + 12ab^2c + 12abc^2 \\\\"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
