--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNmCVcRq+6MxrNQIicdDpUh",
+      "authorship_tag": "ABX9TyP3tuQW/4mkkEQq536rvedL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,8 +82,7 @@
         "\\bigtriangleup{ABC}\\\\[0.8em]\n",
         "BC = a, \\quad CA = b, \\quad AB = c, \\quad \\text{radius} = R\\\\[0.8em]\n",
         "\\displaystyle\n",
-        "\\frac{a}{\\sin A} =\\frac{b}{\\sin B} =\\frac{c}{\\sin C} =2R\n",
-        "\n"
+        "\\frac{a}{\\sin A} =\\frac{b}{\\sin B} =\\frac{c}{\\sin C} =2R"
       ],
       "metadata": {
         "id": "OdjIax_bIoua",
@@ -1149,7 +1148,7 @@
           "height": 610
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1175,39 +1174,61 @@
     {
       "cell_type": "code",
       "source": [
-        "---\n",
         "#  整数\n",
+        "# 自然数 N が相異なる素数 a_1,a_2,a_3,\\cdots,a_k を用いて N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} と素因数分解されるとき、\n",
+        "# N の約数の個数は \n",
+        "# (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \n",
+        "# また、その約数の総和は \n",
+        "# (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \n",
+        "# 自然数 Q, N に対し、1 以上 Q以下の N の倍数の個数は\n",
+        "# [Q \\div N]  \n",
+        "# ただし、 [x] はガウス記号ha\n",
+        "# 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n",
+        "# [Q \\div N]-[(P-1) \\div N] ただし、 [x] はガウス記号。\n",
+        "# 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n",
+        "# ab = lg \n",
+        "# 奇数の和\n",
+        "# 1+3+5+\\cdots+(2n-1)=n^2 \n",
+        "# a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n",
+        "# x = bk , y = -ak （kは整数）\n",
+        "%%latex\n",
+        "N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} \n",
+        "\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n",
+        "\\text{then the number of divisers is}\\quad (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n",
+        "\\text{and the sum of them is}\\quad  (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\\n",
+        "\\text{N multiples between 1 and Q is} \\quad [ Q \\div N ] \\quad \\text{where} \\quad Q, N \\in \\mathbf{N} \\\\\n",
+        "\\text{where}\\quad [ ]: \\quad \\text{Gause symbol} \\\\\n",
         "\n",
-        "* 自然数 $N$ が相異なる素数 $a_1,a_2,a_3,\\cdots,a_k$ を用いて $N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k}$ と素因数分解されるとき、\n",
-        "\n",
-        "* $N$ の約数の個数は \n",
-        "$$(p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1)$$ \n",
-        "\n",
-        "* また、その約数の総和は \n",
-        "$$(1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k}) $$ \n",
-        "\n",
-        "* 自然数 $Q$, $N$ に対し、1 以上 $Q$以下の $N$ の倍数の個数は\n",
-        "$$[Q \\div N] $$ 　\n",
-        "ただし、 $[x]$ はガウス記号ha\n",
-        "\n",
-        "* 自然数 $P$, $Q$, $N$ に対し、 $P$ 以上 $Q$以下の $N$ の倍数の個数\n",
-        "$$[Q \\div N]-[(P-1) \\div N]$$ 　ただし、 $[x]$ はガウス記号。\n",
-        "\n",
-        "* 自然数 $a$ , $b$ について、それらの最大公約数を $g$、最小公倍数を $l$ とすると、以下の関係が成り立つ。\n",
-        "$$ab = lg$$ \n",
-        "\n",
-        "* 奇数の和\n",
-        "$$1+3+5+\\cdots+(2n-1)=n^2$$ \n",
-        "\n",
-        "* $a,b$ を互いに素な整数とするとき、1 次不定方程式 $ax + by = 0$ を満たす整数解は\n",
-        "$$x = bk , y = -ak$$ 　（$k$は整数）\n",
-        "\n"
+        "% 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n",
+        "% [Q \\div N]-[(P-1) \\div N] ただし、 [x] はガウス記号。\n",
+        "% 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n",
+        "% ab = lg \n",
+        "% 奇数の和\n",
+        "% 1+3+5+\\cdots+(2n-1)=n^2 \n",
+        "% a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n",
+        "% x = bk , y = -ak （kは整数）\n"
       ],
       "metadata": {
-        "id": "HGZrC8cEEh1U"
+        "id": "HGZrC8cEEh1U",
+        "outputId": "c3875341-a61d-45ab-c6bc-5deaeacda182",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} \n\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n\\text{then the number of divisers is}\\quad (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n\\text{and the sum of them is}\\quad  (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\\n\\text{N multiples between 1 and Q is} \\quad [ Q \\div N ] \\quad \\text{where} \\quad Q, N \\in \\mathbf{N} \\\\\n\\text{where}\\quad [ ]: \\quad \\text{Gause symbol} \\\\\n% 自然数 Q, N に対し、1 以上 Q以下の N の倍数の個数は\n% \\[Q \\div N\\] \\quad \\text{where} \\quad   \n% ただし、 [x] はガウス記号ha\n% 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n% [Q \\div N]-[(P-1) \\div N] ただし、 [x] はガウス記号。\n% 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n% ab = lg \n% 奇数の和\n% 1+3+5+\\cdots+(2n-1)=n^2 \n% a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n% x = bk , y = -ak （kは整数）"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
