--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMRDSHTcRsGfMlDXb7q5cO2",
+      "authorship_tag": "ABX9TyPmKy4UhT3RfSR+vdkDYpCI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1176,10 +1176,10 @@
       "source": [
         "# 整数\n",
         "# 自然数 N が相異なる素数 a_1,a_2,a_3,\\cdots,a_k を用いて N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} と素因数分解されるとき、\n",
-        "# N の約数の個数は \n",
-        "# (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \n",
+        "# N の約数の個数は (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \n",
         "# また、その約数の総和は \n",
         "# (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \n",
+        "# = \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k}\n",
         "# 自然数 Q, N に対し、1 以上 Q以下の N の倍数の個数は\n",
         "# [Q \\div N]  \n",
         "# ただし、 [x] はガウス記号ha\n",
@@ -1196,6 +1196,8 @@
         "\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n",
         "\\text{then the number of divisers is}\\quad (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n",
         "\\text{and the sum of them is}\\quad  (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\\n",
+        "\\displaystyle\n",
+        "= \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k} \\\\\n",
         "\\text{N multiples between 1 and Q is} \\quad [ Q \\div N ] \\quad \\text{where} \\quad Q, N \\in \\mathbf{N} \\\\\n",
         "\\text{where}\\quad [ ]: \\quad \\text{Gause symbol} \\\\\n",
         "\n",
@@ -1210,13 +1212,13 @@
       ],
       "metadata": {
         "id": "HGZrC8cEEh1U",
-        "outputId": "c3875341-a61d-45ab-c6bc-5deaeacda182",
+        "outputId": "aa50ccd8-3b5b-4b33-cf86-c51eff92812e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 167
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1224,7 +1226,7 @@
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ],
-            "text/latex": "N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} \n\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n\\text{then the number of divisers is}\\quad (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n\\text{and the sum of them is}\\quad  (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\\n\\text{N multiples between 1 and Q is} \\quad [ Q \\div N ] \\quad \\text{where} \\quad Q, N \\in \\mathbf{N} \\\\\n\\text{where}\\quad [ ]: \\quad \\text{Gause symbol} \\\\\n% 自然数 Q, N に対し、1 以上 Q以下の N の倍数の個数は\n% \\[Q \\div N\\] \\quad \\text{where} \\quad   \n% ただし、 [x] はガウス記号ha\n% 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n% [Q \\div N]-[(P-1) \\div N] ただし、 [x] はガウス記号。\n% 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n% ab = lg \n% 奇数の和\n% 1+3+5+\\cdots+(2n-1)=n^2 \n% a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n% x = bk , y = -ak （kは整数）"
+            "text/latex": "N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} \n\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n\\text{then the number of divisers is}\\quad (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n\\text{and the sum of them is}\\quad  (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\\n\\displaystyle\n= \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k} \\\\\n\\text{N multiples between 1 and Q is} \\quad [ Q \\div N ] \\quad \\text{where} \\quad Q, N \\in \\mathbf{N} \\\\\n\\text{where}\\quad [ ]: \\quad \\text{Gause symbol} \\\\\n\n% 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n% [Q \\div N]-[(P-1) \\div N] ただし、 [x] はガウス記号。\n% 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n% ab = lg \n% 奇数の和\n% 1+3+5+\\cdots+(2n-1)=n^2 \n% a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n% x = bk , y = -ak （kは整数）"
           },
           "metadata": {}
         }
